bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: value || is not a member of Char
while(action=('R'||'L'||'I'||'A'||'B'||'C'||'Z'||'Y'||'X')){
                 ^BDR:2: error: type mismatch;
 found   : Unit
 required: Boolean
while(action=('R'||'L'||'I'||'A'||'B'||'C'||'Z'||'Y'||'X')){
            ^BDR:22: error: not found: value lisMessage
  action=lisMessage()
         ^