bdr.BDR.scala.code
var action:String=litMessage()
while(action=('R'||'L'||'I'||'A'||'B'||'C'||'Z'||'Y'||'X')){
  if (action=="R"){
    droite();avance()
  } else if (action=="L"){
    gauche();avance()
  } else if (action=="I"){
    retourne();avance()
  } else if (action=='A'){
    avance()
  } else if (action=='B'){
    avance(2)
  } else if (action=="C") {
    avance(3)
  } else if (action=="Z") {
    recule()
  } else if (action=="Y") {
    recule(2)
  } else if (action=="X") {
    recule(3)
  }
  action=lisMessage()
}